--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ env_logger = "0.10.1"
 reqwest = { version = "0.11.24", features = ["blocking", "cookies", "json"] }
 scraper = "0.18.1"
 dirs = "5.0.1"
+kamadak-exif = "0.5.5"
+chrono = { version = "0.4.31", features = ["serde"] }
 
 [dev-dependencies]
 tempfile = "3.10.1"
