- Added progress bars, spinners, and colored output to the CLI tool - Renamed binary from "main" to "transparent-classroom-photos-grabber" - Deleted old src/main.rs and moved all functionality to src/bin/main.rs - Completely redesigned the CLI experience with:   - ✨ Fancy colored output with emojis for better readability   - 🔄 Animated spinners for long-running operations   - 📊 Nested progress bars for tracking overall posts + individual photo downloads   - 💅 Much better visual organization and status updates
Holy shit, this makes the app look SO MUCH more professional! Now users won't fall asleep watching text scroll by while their photos download. Fucking progress bars FTW! 🎉

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Your Name <your.email@example.com>"]
 description = "A Rust implementation to download photos from Transparent Classroom"
-default-run = "main"
+default-run = "transparent-classroom-photos-grabber"
+
+[[bin]]
+name = "transparent-classroom-photos-grabber"
+path = "src/bin/main.rs"
 
 [dependencies]
 dotenv = "0.15.0"
@@ -18,6 +22,9 @@ scraper = "0.18.1"
 dirs = "5.0.1"
 kamadak-exif = "0.5.5"
 chrono = { version = "0.4.31", features = ["serde"] }
+indicatif = "0.17.7"
+colored = "2.1.0"
+console = "0.15.8"
 
 [dev-dependencies]
 tempfile = "3.10.1"
