🚀 Rename binary to shorter, more convenient `tc-photos-grabber`
- Changed default-run from `transparent-classroom-photos-grabber` to `tc-photos-grabber`
- Updated binary name to match the new shorter name
- Kept the same functionality but with a more finger-friendly command name
- No more typing that long-ass binary name every damn time! 🎉

This change makes the CLI tool much more convenient to use without changing any functionality. Your fingers will thank you! 🙏

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Your Name <your.email@example.com>"]
 description = "A Rust implementation to download photos from Transparent Classroom"
-default-run = "transparent-classroom-photos-grabber"
+default-run = "tc-photos-grabber"
 
 [[bin]]
-name = "transparent-classroom-photos-grabber"
+name = "tc-photos-grabber"
 path = "src/bin/main.rs"
 
 [dependencies]
