🚀 Update Cargo.toml with proper author and project metadata 🚀 - Added my real info (Harper Reed) as the author instead of example placeholder - Added MIT license info - keeping it free and open baby! 🆓 - Added GitHub repo links (both repository and homepage) for that sweet, sweet discoverability - Commented out docs.rs link since we're not publishing there yet (TODO vibes) - Cargo.toml is now much more professional and ready for public consumption 💅

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 name = "transparent-classroom-photos-grabber-rs"
 version = "0.1.0"
 edition = "2021"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Harper Reed <harper@modest.com>"]
 description = "A Rust implementation to download photos from Transparent Classroom"
+license = "MIT"
+repository = "https://github.com/harperreed/transparent-classroom-photos-grabber-rs"
+homepage = "https://github.com/harperreed/transparent-classroom-photos-grabber-rs"
+# documentation = "https://docs.rs/transparent-classroom-photos-grabber-rs"
 default-run = "tc-photos-grabber"
 
 [[bin]]
